--- a/src/main/webapp/WEB-INF/templates/views/index.jade
+++ b/src/main/webapp/WEB-INF/templates/views/index.jade
@@ -1,4 +1,4 @@
-- attributes("title") = "Scalatra: a tiny, Sinatra-like web framework for Scala"
+- attributes("title") = "Hello"
 - attributes("headline") = "Welcome to Scalatra"
 
 p= "Hello, World!"
